version/0.17/_sources/api/solver/_autosummary/settings/species_diffusivity.rst.txt
:orphan:

.. _species_diffusivity:

species_diffusivity
===================

.. autoclass:: ansys.fluent.core.solver.settings_232.species_diffusivity.species_diffusivity
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`species_diffusivity_child <species_diffusivity_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`mass_diffusivity <mass_diffusivity>`                'mass_diffusivity' child.

:ref:`thermal_diffusivity <thermal_diffusivity>`       'thermal_diffusivity' child.

================================================   ================================

