version/0.19/_sources/api/solver/_autosummary/settings/species_diffusivity.rst.txt
:orphan:

.. _species_diffusivity:

species_diffusivity
===================

.. autoclass:: ansys.fluent.core.solver.settings_241.species_diffusivity.species_diffusivity
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`species_diffusivity_child <species_diffusivity_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`mass_diffusivity <mass_diffusivity>`                'mass_diffusivity' child.

:ref:`thermal_diffusivity <thermal_diffusivity>`       'thermal_diffusivity' child.

================================================   ================================

